--- a/day_1.html
+++ b/day_1.html
@@ -63,11 +63,17 @@
   <audio controls autoplay loop>
   <source src="audio/slow_suspense.mp3" type="audio/mpeg">
 </audio>
-<p id="demo">Let AJAX change this text.</p>
 
-<div class="jumbotron text-right" style="margin-bottom:0; background-color: transparent;">
-<br><br><br><br><br><br>
-<button class="button" onclick="loadDoc"><span>></span></button>
+<div class="jumbotron text-center" style="margin-bottom:0; background-color: transparent;">
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
+</div>
+
+<div style="float: bottom; background-color: black;">
+   <br>
+<p class="text">
+<p id="demo">Let AJAX change this text.</p>
+<button class="button" style="float: right" onclick="loadDoc"><span>></span></button></p>
 </div>
 
 <script>
