--- a/day_1.html
+++ b/day_1.html
@@ -71,8 +71,8 @@
 
 <div style="float: bottom; background-color: black;">
    <br>
-<a href="demo.html"
-   <button class="button" style="float: right"><span>></span></button></p></a>
+<a href="demo.html">
+   <button class="button" style="float: right" onclick="loadDoc"><span>></span></button></p></a>
 </div>
 
 
