--- a/demo.html
+++ b/demo.html
@@ -135,42 +135,9 @@ font-family: VT323;
   cursor: pointer;
 }
 
-
-/* Change styles for cancel button and delete button on extra small screens */
-@media screen and (max-width: 300px) {
-  .cancelbtn, .deletebtn {
-     width: 100%;
-  }
-}
 </style>
 
-<script>
-// Get the modal
-var modal = document.getElementById("characterModal");
 
-// Get the button that opens the modal
-var btn = document.getElementById("charBtn");
-
-// Get the <span> element that closes the modal
-var span = document.getElementsByClassName("close")[0];
-
-// When the user clicks the button, open the modal 
-btn.onclick = function() {
-  modal.style.display = "block";
-}
-
-// When the user clicks on <span> (x), close the modal
-span.onclick = function() {
-  modal.style.display = "none";
-}
-
-// When the user clicks anywhere outside of the modal, close it
-window.onclick = function(event) {
-  if (event.target == modal) {
-    modal.style.display = "none";
-  }
-}
-</script>
 </head>
 
 <body style="background-image: url('images/living_room_day.jpg'); background-repeat: no-repeat; background-attachment: fixed; background-size: cover;">
@@ -203,8 +170,8 @@ window.onclick = function(event) {
   <div class="modal" id="characterModal">
         <!-- Modal Header -->
         <div class="modal-header">
-          <h4 class="modal-title">Characters</h4>
-          <span class="close">&times;</span>
+          <h4 class="modal-title">Characters <span class="close">&times;</span></h4>
+         
         </div>
         <!-- Modal content -->
         <div class="modal-content">
@@ -253,7 +220,33 @@ window.onclick = function(event) {
 <p class="text">
 Emilio: “What? It doesn’t even work?” <br><br><br> </p>
 </div>
+<script>
+// Get the modal
+var modal = document.getElementById("characterModal");
 
+// Get the button that opens the modal
+var btn = document.getElementById("charBtn");
+
+// Get the <span> element that closes the modal
+var span = document.getElementsByClassName("close")[0];
+
+// When the user clicks the button, open the modal 
+btn.onclick = function() {
+  modal.style.display = "block";
+}
+
+// When the user clicks on <span> (x), close the modal
+span.onclick = function() {
+  modal.style.display = "none";
+}
+
+// When the user clicks anywhere outside of the modal, close it
+window.onclick = function(event) {
+  if (event.target == modal) {
+    modal.style.display = "none";
+  }
+}
+</script>
 
 </body>
 </html>
