--- a/day_3A1.html
+++ b/day_3A1.html
@@ -753,7 +753,7 @@ Diana thought Fiona did it.<br><br><br><br></p>
   </p>
 </div>
 
-<div class="parallax" style="background-image: url('images/dining_2_dayh.jpg');">
+<div class="parallax" style="background-image: url('images/dining_2_day.jpg');">
       </div>
 <div style="height: 190px; background-color: black">
   <br>
