--- a/day_1_1.html
+++ b/day_1_1.html
@@ -746,10 +746,10 @@ Emilio: "Should we look around?" <br><br><br><br></p>
       
       <div id= "option2" class="container" style="background-color: black; width: 30%; text-align: center;">
   <p class="text" style="text-align: center">Options:</p>
-  <a href="day_111.html" id="opt2_1">
+  <a href="day_1_11.html" id="opt2_1">
     <p class="dialogue" style="text-align: center">"I think we should."<br><br></p>
   </a>
-  <a href="day_122.html" id="opt2_2">
+  <a href="day_1_22.html" id="opt2_2">
     <p class="dialogue" style="text-align: center">"No I'm scared."<br><br></p>
   </a>
   </a>
