--- a/day_1.html
+++ b/day_1.html
@@ -746,13 +746,13 @@ Marcus: "Diana, are you awake?" <br><br><br><br></p>
   <p class="text" style="text-align: center">Options:
     <br>
   (Choose wisely. Some choices can lead you to clues)</p>
-  <a href="day_11.html" id="opt1_1">
+  <a href="day_1_1.html" id="opt1_1">
     <p class="dialogue" style="text-align: center">"What's going on?"<br><br></p>
   </a>
-  <a href="day_12.html" id="opt1_2">
+  <a href="day_1_2.html" id="opt1_2">
     <p class="dialogue" style="text-align: center">"Where am I?"<br><br></p>
   </a>
-  <a href="day_13.html" id="opt1_3">
+  <a href="day_1_3.html" id="opt1_3">
     <p class="dialogue" style="text-align: center">"What are YOU doing here?"<br></p>
   </a>
 
