--- a/day_111.html
+++ b/day_111.html
@@ -376,6 +376,9 @@ font-family: VT323;
 </head>
 <body>
   <div class="parallax" style="background-image: url('images/dining_1.jpg');">
+    <audio controls autoplay loop>
+  <source src="audio/slow_suspense.mp3" type="audio/mpeg">
+</audio>
 <div style="position: fixed; right: 0; top: 0">
   <nav class="navbar bg-dark">
   <ul class="navbar-nav">
@@ -704,10 +707,10 @@ Jack: "I agree. We should look around together." <br><br><br><br></p>
       
       <div id= "option3" class="container" style="background-color: black; width: 30%; text-align: center;">
   <p class="text" style="text-align: center">Options:</p>
-  <a href="day_1111clue.html" id="opt3_1">
+  <a href="day_1_111clue.html" id="opt3_1">
     <p class="dialogue" style="text-align: center">"We can cover more ground if we separate."<br><br></p>
   </a>
-  <a href="day_1222.html" id="opt3_2">
+  <a href="day_1_112.html" id="opt3_2">
     <p class="dialogue" style="text-align: center">"Let's go together."<br><br></p>
   </a>
   </a>
