Update and rename day_1111.html to day_1_111.html

--- a/day_1_111.html
+++ b/day_1_111.html
@@ -423,6 +423,9 @@ font-family: VT323;
 </head>
 <body>
   <div class="parallax" style="background-image: url('images/front_porch.jpg');">
+    <audio controls autoplay loop>
+  <source src="audio/slow_suspense.mp3" type="audio/mpeg">
+</audio>
 <div style="position: fixed; right: 0; top: 0">
   <nav class="navbar bg-dark">
   <ul class="navbar-nav">
@@ -1060,10 +1063,10 @@ Emilio: "Now what?" <br><br><br><br></p>
       
       <div id= "option4" class="container" style="background-color: black; width: 30%; text-align: center;">
   <p class="text" style="text-align: center">Options:</p>
-  <a href="day_11111.html" id="opt2_1">
+  <a href="day_1_1111.html" id="opt2_1">
     <p class="dialogue" style="text-align: center">"We could wait in the dining room."<br><br></p>
   </a>
-  <a href="day_12222.html" id="opt2_2">
+  <a href="day_1_1112.html" id="opt2_2">
     <p class="dialogue" style="text-align: center">"Let's go for a swim."<br><br></p>
   </a>
   </a>
