Update and rename day_11111.html to day_1_1111.html

--- a/day_1_1111.html
+++ b/day_1_1111.html
@@ -935,10 +935,10 @@ Jack: "It's too dangerous, Emilio." <br><br><br><br></p>
       
       <div id= "option2" class="container" style="background-color: black; width: 30%; text-align: center;">
   <p class="text" style="text-align: center">Options:</p>
-  <a href="day_111111.html" id="opt2_1">
+  <a href="day_1_11111.html" id="opt2_1">
     <p class="dialogue" style="text-align: center">"I think I'll stay."<br><br></p>
   </a>
-  <a href="day_111112.html" id="opt2_2">
+  <a href="day_1_11112.html" id="opt2_2">
     <p class="dialogue" style="text-align: center">"We should both stay."<br><br></p>
   </a>
   </a>
