--- a/day_1_11111.html
+++ b/day_1_11111.html
@@ -617,7 +617,8 @@ font-family: VT323;
                   <div class="chFlip-box-front">
                     <img src="images/emilio.jpg" style="width: 66%"><br><p class="text" style="text-align: center;">Emilio</p>
                   </div>
-                  <div class="chFlip-box-back"><p class="text" style="text-align: center; font-size: 30px"> Emilio A: A high school student at Gueniver Prep. He is an only child.</p></div>
+                  <div class="chFlip-box-back"><p class="text" style="text-align: center; font-size: 30px"> Emilio A: A high school student at Gueniver Prep. 
+                    He is an only child.</p></div>
               </div>
             </div>
           </div>
@@ -809,13 +810,13 @@ Jack: "It's too late to go now. I'll think about it more tommorrow." <br><br><br
   <p class="text" style="text-align: center">Options to explore the house:
     <br>
   Hint! Diana: Things seem to be getting loud in the room across from mine.</p>
-  <a href="day_111111s.html">
+  <a href="day_1_11111s.html">
     <p class="dialogue" style="text-align: center">Explore the downstairs study. <br><br></p>
   </a>
-  <a href="day_111111b.html">
+  <a href="day_1_11111b.html">
     <p class="dialogue" style="text-align: center">Explore the downstairs bathroom.<br><br></p>
   </a>
-  <a href="day_111111j.html">
+  <a href="day_1_11111j.html">
     <p class="dialogue" style="text-align: center">Explore the Jack and Fiona's room. <br><br></p>
   </a>
 </div>
