--- a/day_1_11112.html
+++ b/day_1_11112.html
@@ -665,7 +665,7 @@ font-family: VT323;
                   <div class="chFlip-box-front">
                     <img src="images/lyla.jpg" style="width: 66%"><br><p class="text" style="text-align: center;">Lyla</p>
                   </div>
-                  <div class="chFlip-box-back"><p class="text" style="text-align: center; font-size: 30px"> Lyla E: A high school student at Gueniver prep.</p></div>
+                  <div class="chFlip-box-back"><p class="text" style="text-align: center; font-size: 30px"> Lyla E: A high school student at Gueniver prep. </p></div>
               </div>
             </div>
           </div>
@@ -809,13 +809,13 @@ Jack: "It's too late to go now. I'll think about it more tommorrow." <br><br><br
   <p class="text" style="text-align: center">Options to explore the house:
     <br>
   Hint! Diana: Things seem to be getting loud in the room across from mine.</p>
-  <a href="day_111112s.html">
+  <a href="day_1_11112s.html">
     <p class="dialogue" style="text-align: center">Explore the downstairs study. <br><br></p>
   </a>
-  <a href="day_111112b.html">
+  <a href="day_1_11112b.html">
     <p class="dialogue" style="text-align: center">Explore the downstairs bathroom.<br><br></p>
   </a>
-  <a href="day_111112j.html">
+  <a href="day_1_11112j.html">
     <p class="dialogue" style="text-align: center">Explore the Jack and Fiona's room. <br><br></p>
   </a>
 </div>
