Update and rename day_11211s.html to day_1_1211s.html

--- a/day_1_1211s.html
+++ b/day_1_1211s.html
@@ -615,7 +615,7 @@ font-family: VT323;
                   <div class="chFlip-box-front">
                     <img src="images/emilio.jpg" style="width: 66%"><br><p class="text" style="text-align: center;">Emilio</p>
                   </div>
-                  <div class="chFlip-box-back"><p class="text" style="text-align: center; font-size: 30px"> Emilio A: A high school student at Gueniver Prep.</p></div>
+                  <div class="chFlip-box-back"><p class="text" style="text-align: center; font-size: 30px"> Emilio A: A high school student at Gueniver Prep. He is an only child.</p></div>
               </div>
             </div>
           </div>
@@ -717,7 +717,7 @@ Diana searched the study but found no clues. <br><br><br><br></p>
       
       <div id= "option2" class="container" style="background-color: black; width: 30%; text-align: center;">
   <p class="text" style="text-align: center; color: red">You have completed day 1.</p>
-  <a href="day_2C.html">
+  <a href="day_2_C.html">
     <p class="dialogue" style="text-align: center; color: red">Continue to Day 2 --> <br><br></p>
   </a>
 </div>
