--- a/day_1_21.html
+++ b/day_1_21.html
@@ -707,10 +707,10 @@ Jack: "I agree. We should look around together." <br><br><br><br></p>
       
       <div id= "option3" class="container" style="background-color: black; width: 30%; text-align: center;">
   <p class="text" style="text-align: center">Options:</p>
-  <a href="day_1111clue.html" id="opt3_1">
+  <a href="day_1_1211.html" id="opt3_1">
     <p class="dialogue" style="text-align: center">"We can cover more ground if we separate."<br><br></p>
   </a>
-  <a href="day_1112.html" id="opt3_2">
+  <a href="day_1_1212.html" id="opt3_2">
     <p class="dialogue" style="text-align: center">"Let's go together."<br><br></p>
   </a>
   </a>
