Update and rename day_2A.html to day_2_A.html

--- a/day_2_A.html
+++ b/day_2_A.html
@@ -617,7 +617,7 @@ font-family: VT323;
                   <div class="chFlip-box-front">
                     <img src="images/emilio.jpg" style="width: 66%"><br><p class="text" style="text-align: center;">Emilio</p>
                   </div>
-                  <div class="chFlip-box-back"><p class="text" style="text-align: center; font-size: 30px"> Emilio A: A high school student at Gueniver Prep.</p></div>
+                  <div class="chFlip-box-back"><p class="text" style="text-align: center; font-size: 30px"> Emilio A: A high school student at Gueniver Prep. He is an only child.</p></div>
               </div>
             </div>
           </div>
@@ -944,10 +944,10 @@ Diana and Lyla woke up and went downstairs and met the rest of the group in the 
       
       <div id= "option" class="container" style="background-color: black; width: 30%; text-align: center;">
   <p class="text" style="text-align: center">Options: </p>
-  <a href="day_2A1.html">
+  <a href="day_2_A1.html">
     <p class="dialogue" style="text-align: center">Ask Fiona about the pen.<br><br></p>
   </a>
-  <a href="day_2A2.html">
+  <a href="day_2_A2.html">
     <p class="dialogue" style="text-align: center">Gossip to Lyla about Fiona being weird.<br><br></p>
   </a>
 </div>
