Update and rename day_2A1.html to day_2_A1.html

--- a/day_2_A1.html
+++ b/day_2_A1.html
@@ -617,7 +617,7 @@ font-family: VT323;
                   <div class="chFlip-box-front">
                     <img src="images/emilio.jpg" style="width: 66%"><br><p class="text" style="text-align: center;">Emilio</p>
                   </div>
-                  <div class="chFlip-box-back"><p class="text" style="text-align: center; font-size: 30px"> Emilio A: A high school student at Gueniver Prep.</p></div>
+                  <div class="chFlip-box-back"><p class="text" style="text-align: center; font-size: 30px"> Emilio A: A high school student at Gueniver Prep. He is an only child.</p></div>
               </div>
             </div>
           </div>
@@ -855,13 +855,13 @@ The girls got into bed. After Lyla fell asleep, Diana felt the urge to explore a
       
       <div id= "option2" class="container" style="background-color: black; width: 30%; text-align: center;">
   <p class="text" style="text-align: center">Options to explore the house:</p>
-  <a href="day_2A1s.html">
+  <a href="day_2_A1s.html">
     <p class="dialogue" style="text-align: center">Explore the downstairs study. <br><br></p>
   </a>
-  <a href="day_2A1b.html">
+  <a href="day_2_A1b.html">
     <p class="dialogue" style="text-align: center">Explore the downstairs bathroom.<br><br></p>
   </a>
-  <a href="day_2A1j.html">
+  <a href="day_2_A1j.html">
     <p class="dialogue" style="text-align: center">Explore the Jack and Fiona's room. <br><br></p>
   </a>
 </div>
