--- a/day_2_C1.html
+++ b/day_2_C1.html
@@ -855,13 +855,13 @@ The girls got into bed. After Lyla fell asleep, Diana felt the urge to explore a
       
       <div id= "option2" class="container" style="background-color: black; width: 30%; text-align: center;">
   <p class="text" style="text-align: center">Options to explore the house:</p>
-  <a href="day_2C1s.html">
+  <a href="day_2_C1s.html">
     <p class="dialogue" style="text-align: center">Explore the downstairs study. <br><br></p>
   </a>
-  <a href="day_2C1b.html">
+  <a href="day_2_C1b.html">
     <p class="dialogue" style="text-align: center">Explore the downstairs bathroom.<br><br></p>
   </a>
-  <a href="day_2A1j.html">
+  <a href="day_2_C1j.html">
     <p class="dialogue" style="text-align: center">Explore the Jack and Fiona's room. <br><br></p>
   </a>
 </div>
