Update and rename day_2C1s.html to day_2_C1s.html

--- a/day_2_C1s.html
+++ b/day_2_C1s.html
@@ -446,12 +446,10 @@ font-family: VT323;
                 <div class="clFlip-box">
                   <div class="clFlip-box-inner">
                     <div class="clFlip-box-front">
-                      <img src="images/pen_clue.jpg" style="width: 80%">
+                      <img src="images/clue_not_found.jpg" style="width: 80%">
                     </div>
-                    <div class="clFlip-box-back">Day 2: clue 3
-                    <br>
-                      <br>
-                    Fiona seemed really interested in this, but we'll leave it here. No point in taking it.</div>
+                    <div class="clFlip-box-back">Day 2: clue 3 not found
+                    </div>
                   </div>
                 </div>
               </div>
@@ -738,7 +736,7 @@ Diana searched the study. The pen on the desk caught her eye. <br><br><br><br></
       
       <div id= "option2" class="container" style="background-color: black; width: 30%; text-align: center;">
   <p class="text" style="text-align: center">You have completed day 2.</p>
-  <a href="day_3E.html">
+  <a href="day_3_E.html">
     <p class="dialogue" style="text-align: center">Continue to Day 3<br><br></p>
   </a>
 </div>
