Update and rename day_3E.html to day_3_E.html

--- a/day_3_E.html
+++ b/day_3_E.html
@@ -621,7 +621,7 @@ font-family: VT323;
                   <div class="chFlip-box-front">
                     <img src="images/emilio.jpg" style="width: 66%"><br><p class="text" style="text-align: center;">Emilio</p>
                   </div>
-                  <div class="chFlip-box-back"><p class="text" style="text-align: center; font-size: 30px"> Emilio A: A high school student at Gueniver Prep.</p></div>
+                  <div class="chFlip-box-back"><p class="text" style="text-align: center; font-size: 30px"> Emilio A: A high school student at Gueniver Prep. He is an only child.</p></div>
               </div>
             </div>
           </div>
@@ -778,7 +778,7 @@ Lyla and Diana ran out of their room. They met up with Marcus in the hallway. <b
     <br>
     !! (Choose wisely.)
   </p>
-  <a href="day_3E1.html">
+  <a href="day_3_E1.html">
     <p class="dialogue" style="text-align: center; color: red">Fiona<br><br></p>
   </a>
   <a href="fail.html">
