Update and rename day_3E1.html to day_3_E1.html

--- a/day_3_E1.html
+++ b/day_3_E1.html
@@ -620,7 +620,7 @@ font-family: VT323;
                   <div class="chFlip-box-front">
                     <img src="images/emilio.jpg" style="width: 66%"><br><p class="text" style="text-align: center;">Emilio</p>
                   </div>
-                  <div class="chFlip-box-back"><p class="text" style="text-align: center; font-size: 30px"> Emilio A: A high school student at Gueniver Prep.</p></div>
+                  <div class="chFlip-box-back"><p class="text" style="text-align: center; font-size: 30px"> Emilio A: A high school student at Gueniver Prep. He is an only child.</p></div>
               </div>
             </div>
           </div>
@@ -923,10 +923,10 @@ Diana thought Fiona did it.<br><br><br><br></p>
       <div id= "option2" class="container" style="background-color: black; width: 30%; text-align: center;">
   <p class="text" style="text-align: center">Options to explore the house:
   </p>
-  <a href="day_3E1b.html">
+  <a href="day_3_E1b.html">
     <p class="dialogue" style="text-align: center">Explore the backyard. <br><br></p>
   </a>
-  <a href="day_3E1u.html">
+  <a href="day_3_E1u.html">
     <p class="dialogue" style="text-align: center">Explore the upstairs balcony.<br><br></p>
   </a>
 
