--- a/day_3_E.html
+++ b/day_3_E.html
@@ -376,8 +376,8 @@ font-family: VT323;
 </head>
 <body>
   <div class="parallax" style="background-image: url('images/day_3.jpg');">
-    <audio width="150px" height="20" allow=”autoplay” autoplay="autoplay" src="audio/scream.mp3" controls="controls">If stream does not start automatically press the play button
-    </audio >
+   <audio autoplay><source src="audio/scream.mp3" type="audio/mpeg">
+    </audio>
     <audio controls autoplay loop>
   <source src="audio/suspense2.mp3" type="audio/mpeg">
 </audio>
