--- a/day_3_A.html
+++ b/day_3_A.html
@@ -377,6 +377,7 @@ font-family: VT323;
 <body>
   <div class="parallax" style="background-image: url('images/day_3.jpg');">
     <audio autoplay><source src="audio/scream.mp3" type="audio/mpeg">
+    </audio>
     <audio controls autoplay loop>
   <source src="audio/suspense2.mp3" type="audio/mpeg">
 </audio>
