--- a/day_3F_fail.html
+++ b/day_3F_fail.html
@@ -392,7 +392,7 @@ FAIL<br><br><br><br></p>
       <div id= "option2" class="container" style="background-color: black; width: 30%; text-align: center;">
   <p class="text" style="text-align: center; color: red">You have failed. Click continue to restart the day or restart to play from the first day.
   </p>
-  <a href="day_3_E.html">
+  <a href="day_3_F.html">
     <p class="dialogue" style="text-align: center">CONTINUE<br><br></p>
   </a>
    <a href="day_1.html">
