--- a/day_1_121.html
+++ b/day_1_121.html
@@ -375,7 +375,7 @@ font-family: VT323;
   </style>
 </head>
 <body>
-  <div class="parallax" style="background-image: url('images/front_porch.jpg');">
+  <div class="parallax" style="background-image: url('images/living_room_day.jpg');">
     <audio controls autoplay loop>
   <source src="audio/slow_suspense.mp3" type="audio/mpeg">
 </audio>
