--- a/day_1_1111.html
+++ b/day_1_1111.html
@@ -892,7 +892,7 @@ Marcus walked into the kitchen to find the adults. Lyla, Diana, and Emilio follo
 Marcus: "Emilio says he can swim to the mainland." <br><br><br><br></p>
 </div>
 
-<div class="parallax" style="background-image: url('images/dining_2_day.jpg');">
+<div class="parallax" style="background-image: url('images/kitchen_day.jpg');">
       </div>
       <div style="height: 190px; background-color: black">
     <br>
@@ -901,7 +901,7 @@ Marcus: "Emilio says he can swim to the mainland." <br><br><br><br></p>
 Jack: "I don't think that's the best idea right now." <br><br><br><br></p>
 </div>
 
-<div class="parallax" style="background-image: url('images/dining_2_day.jpg');">
+<div class="parallax" style="background-image: url('images/kitchen_day.jpg');">
       </div>
       <div style="height: 190px; background-color: black">
     <br>
@@ -911,7 +911,7 @@ Jack: "I don't think that's the best idea right now." <br><br><br><br></p>
 <br><br><br><br></p>
 </div>
 
-<div class="parallax" style="background-image: url('images/dining_2_day.jpg');">
+<div class="parallax" style="background-image: url('images/kitchen_day.jpg');">
       </div>
       <div style="height: 190px; background-color: black">
     <br>
@@ -920,7 +920,7 @@ Jack: "I don't think that's the best idea right now." <br><br><br><br></p>
 Jack: "It's too dangerous, Emilio." <br><br><br><br></p>
 </div>
 
-<div class="parallax" style="background-image: url('images/dining_2_day.jpg');">
+<div class="parallax" style="background-image: url('images/kitchen_day.jpg');">
       </div>
       <div style="height: 190px; background-color: black">
     <br>
@@ -931,7 +931,7 @@ Jack: "It's too dangerous, Emilio." <br><br><br><br></p>
 </div>
 
 
-  <div class="parallax" style="background-image: url('images/dining_2_day.jpg');">
+  <div class="parallax" style="background-image: url('images/kitchen_day.jpg');">
       
       <div id= "option2" class="container" style="background-color: black; width: 30%; text-align: center;">
   <p class="text" style="text-align: center">Options:</p>
