--- a/day_1_12.html
+++ b/day_1_12.html
@@ -710,7 +710,7 @@ Jack: "We should be fine as long as the group sticks together." <br><br><br><br>
     <br>
     
   <p class="dialogue">
-The group makes their way into the kitchen.<br><br><br><br></p>
+The group maked their way into the kitchen.<br><br><br><br></p>
 </div>
 
 <div class="parallax" style="background-image: url('images/kitchen_day.jpg');">
