--- a/day_1_12.html
+++ b/day_1_12.html
@@ -720,7 +720,7 @@ The group made their way into the kitchen.<br><br><br><br></p>
     <br>
     
   <p class="dialogue">
-Jack opens the fridge. <br><br><br><br></p>
+Jack opened the fridge. <br><br><br><br></p>
 </div>
 
 <div class="parallax" style="background-image: url('images/kitchen_day.jpg');">
@@ -736,9 +736,9 @@ Jack: "The fridge is fully stocked." <br><br><br><br></p>
 </div>
 <div style="height: 190px; background-color: black">
     <br>
-<img src="images/jack.jpg" alt="Jack" width="130" style="float: left">
+<img src="images/marcus.jpg" alt="Marcus" width="130" style="float: left">
   <p class="dialogue">
-Jack: "There's a lot of food in the pantry too." <br><br><br><br></p>
+Marcus: "There's a lot of food in the pantry too." <br><br><br><br></p>
 </div>
 
 <div class="parallax" style="background-image: url('images/kitchen_day.jpg');">
