--- a/day_1_111.html
+++ b/day_1_111.html
@@ -967,7 +967,7 @@ Marian: "Yes. I'll help." <br><br><br><br></p>
     <br>
     <img src="images/jack.jpg" alt="Jack" width="130" style="float: left">
   <p class="dialogue">
-Jack: "The rest of you can try to entertain yourselves in the living room. I think I saw a TV in there." <br>The adults maind their way to the kitchen.<br></p>
+Jack: "The rest of you can try to entertain yourselves in the living room. I think I saw a TV in there." <br>The adults made their way to the kitchen.<br></p>
 </div>
 <div class="parallax" style="background-image: url('images/center_room_day.jpg');">
 </div>
