--- a/day_1_11111j.html
+++ b/day_1_11111j.html
@@ -695,7 +695,7 @@ font-family: VT323;
 <div style="height: 190px; background-color: black">
     <br>
   <p class="dialogue">
-Diana chose to explore the Jack and Fiona's room.<br><br><br><br></p>
+Diana chose to explore Jack and Fiona's room.<br><br><br><br></p>
 </div>
 
   <div class="parallax" style="background-image: url('images/upstairs_hallway.jpg');">
