--- a/day_3_A1.html
+++ b/day_3_A1.html
@@ -716,7 +716,7 @@ Diana thought Fiona did it.<br><br><br><br></p>
 <div style="height: 190px; background-color: black">
   <br>
     <p class="dialogue">
-    Fiona, overwhelmed with grief and anger stormed off into her room. 
+    Fiona, overwhelmed with grief and anger, stormed off into her room. 
     <br><br><br><br>
   </p>
 </div>
@@ -859,7 +859,7 @@ Diana thought Fiona did it.<br><br><br><br></p>
   <div id="clueFound" class="container" style="background-color: black; width: 30%">
     <br>
     <p class= "text" style= "text-align: center; font-size: 30px">
-    We learned something new abou Marian. She used to be a chef. 
+    We learned something new about Marian. She used to be a chef. 
     <br><br>
     <img src="images/chef_clue.jpg" style="width: 60%"> </p>
     <br><br><br>
