--- a/day_3_E1.html
+++ b/day_3_E1.html
@@ -417,12 +417,10 @@ font-family: VT323;
                 <div class="clFlip-box">
                   <div class="clFlip-box-inner">
                     <div class="clFlip-box-front">
-                      <img src="images/welcome_sign_clickable.jpg" style="width: 80%">
+                      <img src="images/clue_not_found.jpg" style="width: 80%">
                     </div>
-                    <div class="clFlip-box-back">Day 1: clue 1 
-                      <br>
-                      <br>
-                    This welcome sign seems suspicious. Why is a part scratched out?</div>
+                    <div class="clFlip-box-back">Day 1: clue 1 not found
+
                   </div>
                 </div>
               </div>
