--- a/day_3D_fail.html
+++ b/day_3D_fail.html
@@ -400,7 +400,8 @@ FAIL<br><br><br><br></p>
   </a>
 </div>
 
-
+<div class="parallax" style="background-image: url('images/failure.jpg');">
+    </div>
     <script>
 
 // Get the modal
