--- a/day_3E_fail.html
+++ b/day_3E_fail.html
@@ -399,7 +399,8 @@ FAIL<br><br><br><br></p>
     <p class="dialogue" style="text-align: center">RESTART<br><br></p>
   </a>
 </div>
-
+<div class="parallax" style="background-image: url('images/failure.jpg');">
+    </div>
 
     <script>
 
