--- a/day_3F_fail.html
+++ b/day_3F_fail.html
@@ -400,7 +400,9 @@ FAIL<br><br><br><br></p>
   </a>
 </div>
 
-
+<div class="parallax" style="background-image: url('images/failure.jpg');">
+    </div>
+                                                                          
     <script>
 
 // Get the modal
