--- a/day_2_B1.html
+++ b/day_2_B1.html
@@ -438,7 +438,7 @@ font-family: VT323;
                     <div class="clFlip-box-back">Day 1: clue 2 
                       <br>
                       <br>
-                      Jack and Fiona don't seem to be getting along and Fiona is hiding something.
+                      Jack and Fiona don't seem to be getting along and Fiona is hiding something. </div>
                   </div>
                 </div>
               </div>
