--- a/day_3_E.html
+++ b/day_3_E.html
@@ -781,13 +781,13 @@ Lyla and Diana ran out of their room. They met up with Marcus in the hallway. <b
   <a href="day_3_E1.html">
     <p class="dialogue" style="text-align: center; color: red">Fiona<br><br></p>
   </a>
-  <a href="fail.html">
+  <a href="day_3E_fail.html">
     <p class="dialogue" style="text-align: center; color: red">Emilio<br><br></p>
   </a>
-  <a href="fail.html">
+  <a href="day_3E_fail.html">
     <p class="dialogue" style="text-align: center; color: red">Marian<br><br></p>
   </a>
-  <a href="fail.html">
+  <a href="day_3E_fail.html">
     <p class="dialogue" style="text-align: center; color: red">Someone else<br><br></p>
   </a>
 </div>
