--- a/day_3B_fail.html
+++ b/day_3B_fail.html
@@ -384,7 +384,7 @@ font-family: VT323;
     </div>
 <div style="height: 190px; background-color: black">
     <br>
-  <p class="dialogue" style="text-align: center; font-size: 90px;>
+  <p class="dialogue" style="text-align: center; font-size: 90px;">
 FAIL<br><br><br><br></p>
 </div>
   <div class="parallax" style="background-image: url('images/diana_room2_night.jpg');">
